--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.18.0
   lucide_icons: ^0.257.0
 
 dev_dependencies:
