--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core: ^2.32.0
   firebase_auth: ^4.16.0
   lucide_icons: ^0.257.0
+  cloud_firestore: ^4.17.5
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
