--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   lucide_icons: ^0.257.0
   cloud_firestore: ^4.17.5
   mask_text_input_formatter: ^2.9.0
+  fl_chart: ^1.0.0
+  intl: ^0.20.2
+  syncfusion_flutter_charts: ^29.2.10
 
 dev_dependencies:
   flutter_test:
